--- a/langs/en.lang
+++ b/langs/en.lang
@@ -31,17 +31,16 @@ warnings.safari=You seem to be using safari, which has proven multiple times to 
 serverlist.skin.not_an_image=Not an image!
 serverlist.skin.wrong_size=Wrong size!
 serverlist.skin.successful=Done!
-serverlist.welcome=Welcome,\s
+serverlist.welcome=Welcome, \1! Select a world:
 serverlist.select_skin=Select skin
 serverlist.logout=Log out
-serverlist.select=Play a world:
 serverlist.hosting_info=Hosting a server
 serverlist.refresh=Refresh
 serverlist.add_server=Add server
 serverlist.add_server.placeholder=server ip
 serverlist.new_world=New world
 serverlist.import=Import .map
-serverlist.mods=Client mods
+serverlist.settings=Settings
 
 worldoptions=World options
 worldoptions.world_name=World name:
