--- a/langs/es.lang
+++ b/langs/es.lang
@@ -31,17 +31,16 @@ warnings.safari=Parece que estás utilizando Safari, que ha demostrado varias ve
 serverlist.skin.not_an_image=¡No es una imagen!
 serverlist.skin.wrong_size=¡Tamaño equivocado!
 serverlist.skin.successful=Vale
-serverlist.welcome=Bienvenido,\s
+serverlist.welcome=¡Bienvenido, \1! Seleccionar un mundo:
 serverlist.select_skin=Seleccionar aspecto
 serverlist.logout=Cerrar sesión
-serverlist.select=Jugar un mundo
 serverlist.hosting_info=Alojar servidor
 serverlist.refresh=Actualizar
 serverlist.add_server=Añadir servidor
 serverlist.add_server.placeholder=ip del servidor
 serverlist.new_world=Nuevo mundo
 serverlist.import=Importar .map
-serverlist.mods=Mods de cliente
+serverlist.settings=Ajustes
 
 worldoptions=Opciones del mundo
 worldoptions.world_name=Nombre del mundo:
