--- a/langs/pirate.lang
+++ b/langs/pirate.lang
@@ -11,11 +11,11 @@ misc.save_app=Save app to Desktop?
 misc.title.menu=Paper MC
 misc.title.playing=\1 | pMC
 misc.title.notification=(🔴 \2) \1 | pMC
-misc.ok=Ok
+misc.ok=Okay
 misc.menu_back=Back
 misc.landscape_notice=Switch to Landscape
-misc.discard=Discard
-misc.save=Save
+misc.discard=Forget it!
+misc.save=Ahoy!
 
 connection.refused=Arrr! The ship won't let ye board!
 connection.lost=Blasted! We've lost the wind in our sails!
@@ -31,17 +31,16 @@ warnings.safari=Arrr, ye be usin' Safari, a leaky vessel! Swap to a sturdier shi
 serverlist.skin.not_an_image=That ain't no image!
 serverlist.skin.wrong_size=Blimey, that be too small a sail! Hoist a bigger one!
 serverlist.skin.successful=Ahoy!
-serverlist.welcome=Ahoy,\s
-serverlist.select_skin=Choose yer colors
+serverlist.welcome=🏴‍☠️ Ahoy, \1! Set sail for:
+serverlist.select_skin=Choose yer look
 serverlist.logout=Walk the plank
-serverlist.select=Set sail for:
 serverlist.hosting_info=Build-a-ship
 serverlist.refresh=Try again
 serverlist.add_server=Chart a new course
 serverlist.add_server.placeholder=coordinates
 serverlist.new_world=Forge a new land!
 serverlist.import=Bring aboard a .map
-serverlist.mods=Ship upgrades
+serverlist.settings=Tinkerin’s
 
 worldoptions=Land settings!
 worldoptions.world_name=Name yer land:
